# control_flow_fleshing

./: .gitignore  .run_javabc_decomp_lab_bug.sh.swp  CFG.py  GraphGenerator.py  ProgramGenerator.py  README.md  Runner.py  TestHarness.py  Wrapper.cpp  Wrapper.cs  Wrapper.java  WrapperMultiThread.java  WrapperNoReflection.java  Wrapper_lab.cpp  c.txt  c_clang.txt  c_gcc.txt  cil.txt  cil_decomp.txt  compile_test.sh  compile_test_cil.sh  compile_test_java  compile_test_java.sh  compile_test_llvm.sh  compile_wrapper_cil.sh  compile_wrapper_java.sh  compile_wrapper_llvm.sh  count_no_reflection.csv  count_reflection.csv  execute_test_cil.sh  execute_test_java.sh  flesh_graph.py  fuzzing_campaign.py  generate_graph.py  generate_path.py  get_count_no_reflection.sh  get_count_reflection.sh  get_stats_no_reflection.sh  get_stats_reflection.sh  ghidra_check.sh  (+47 more)
_old/: wrapper.ll
aux_tools/: out_opt.ll  program_comparator.cpp  program_comparator.py  test1.txt  test2.txt
c/: CProgramGenerator.py  CRunner.py  CTestHarness.py  Utils.py  Wrapper.c  Wrapper.cpp  WrapperStatic.c  compile_test_c.sh
cil/: CILProgramGenerator.py  CILRunner.py  CILTestHarness.py  Utils.py  compile_wrapper_cil.sh  decompile_test_cil.sh  execute_test_cil.sh  recompile_test_cil.sh
evaluation/: __dredd_covered_mutants  path.txt  results.txt  run.sh  run_csmith_tests.sh  run_csmith_tests_opt.sh  run_fleshing_tests.sh  run_fleshing_tests_default.sh  run_tests.sh
graph_gen/: graph_gen.py  graph_gen_from_dot.py
graphs/: CFG.py  flesh_graph.py  generate_graph.py  generate_graphs.py  generate_path.py  (+5 more)
(+316 files in other folders)
